[tool.poetry]
name = "reticulated-poetry"
version = "0.1.0"
description = ""
authors = ["Joshua Cannon <joshdcannon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
reticulated = {path = "../reticulated"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
